--- a/MyConnector/MyConnector.csproj
+++ b/MyConnector/MyConnector.csproj
@@ -7,6 +7,8 @@
     <Company>Pablo BiajoniPablo Biajoni</Company>
     <PackageLicenseFile>lictext.txt</PackageLicenseFile>
     <PackageTags>MySQL</PackageTags>
+    <Description>It's a simple crud connector for mysql</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
