--- a/MyConnector.Tests/MyConnector.Tests.csproj
+++ b/MyConnector.Tests/MyConnector.Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="FieldsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DatabaseTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
