--- a/MyConnector/MyConnector.csproj
+++ b/MyConnector/MyConnector.csproj
@@ -7,8 +7,8 @@
     <Company>Pablo BiajoniPablo Biajoni</Company>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageTags>MySQL</PackageTags>
-    <Description>It's a simple crud connector for mysql</Description>
-    <Version>1.0.28</Version>
+    <Description>Gerenciador de bases de dados MySQL com funções de CRUD</Description>
+    <Version>1.0.30</Version>
   </PropertyGroup>
 
   <ItemGroup>
