--- a/MyConnector/MyConnector.csproj
+++ b/MyConnector/MyConnector.csproj
@@ -8,7 +8,8 @@
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageTags>MySQL</PackageTags>
     <Description>Gerenciador de bases de dados MySQL com funções de CRUD</Description>
-    <Version>1.0.58</Version>
+    <Version>1.0.66</Version>
+    <Configurations>Debug;Release;Debug Aldeia</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
