--- a/MyConnector.Tests/MyConnector.Tests.csproj
+++ b/MyConnector.Tests/MyConnector.Tests.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionsTests.cs" />
     <Compile Include="FieldsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DatabaseTests.cs" />
