Adicionado stripSlashes e atualizado mysql data

--- a/MyConnector.Examples/App.config
+++ b/MyConnector.Examples/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -7,4 +7,16 @@
     <add key="example2" value="convert zero datetime=True;allow zero datetime=false;allow user variables=true;Connect Timeout=30;SERVER=162.241.203.55;PORT=3306;UID=sabend06_proton;PASSWORD=wR@ma4AH&amp;*(;DATABASE=sabend06_proton;" />
     <add key="example" value="SERVER=localhost;PORT=3306;UID=myconnector;PASSWORD=1234;DATABASE=proton;" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
